@@ -92,6 +92,7 @@ Gem::Specification.new do |s|
       s.add_development_dependency(%q<jeweler>, [">= 0"])
       s.add_development_dependency(%q<patron>, [">= 0"])
       s.add_development_dependency(%q<em-http-request>, [">= 0"])
+      s.add_development_dependency(%q<net-http-persistent>, [">= 1.4"])
     else
       s.add_dependency(%q<rufus-lru>, [">= 0"])
       s.add_dependency(%q<rufus-json>, [">= 0.2.5"])
@@ -100,6 +101,7 @@ Gem::Specification.new do |s|
       s.add_dependency(%q<jeweler>, [">= 0"])
       s.add_dependency(%q<patron>, [">= 0"])
       s.add_dependency(%q<em-http-request>, [">= 0"])
+      s.add_dependency(%q<net-http-persistent>, [">= 1.4"])
     end
   else
     s.add_dependency(%q<rufus-lru>, [">= 0"])
@@ -109,6 +111,7 @@ Gem::Specification.new do |s|
     s.add_dependency(%q<jeweler>, [">= 0"])
     s.add_dependency(%q<patron>, [">= 0"])
     s.add_dependency(%q<em-http-request>, [">= 0"])
+    s.add_dependency(%q<net-http-persistent>, [">= 1.4"])
   end
 end
 
